--- a/src/ViewportViewExtension/ViewportViewExtension/packages.config
+++ b/src/ViewportViewExtension/ViewportViewExtension/packages.config
@@ -5,11 +5,16 @@
   <package id="CefSharp.Common" version="65.0.1" targetFramework="net452" />
   <package id="CefSharp.Wpf" version="65.0.1" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net452" />
-  <package id="DynamoVisualProgramming.Core" version="2.1.0-beta6460" targetFramework="net452" />
-  <package id="DynamoVisualProgramming.DynamoServices" version="2.1.0-beta6460" targetFramework="net452" />
-  <package id="DynamoVisualProgramming.WpfUILibrary" version="2.1.0-beta6460" targetFramework="net452" />
-  <package id="DynamoVisualProgramming.ZeroTouchLibrary" version="2.1.0-beta6460" targetFramework="net452" />
+  <package id="DynamoVisualProgramming.Core" version="2.7.0.9206" targetFramework="net48" />
+  <package id="DynamoVisualProgramming.DynamoServices" version="2.7.0.9206" targetFramework="net48" />
+  <package id="DynamoVisualProgramming.WpfUILibrary" version="2.7.0.9206" targetFramework="net48" />
+  <package id="DynamoVisualProgramming.ZeroTouchLibrary" version="2.7.0.9206" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="NUnit" version="2.6.3" targetFramework="net452" />
   <package id="Prism" version="4.1.0.0" targetFramework="net452" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
 </packages>
